// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snippet outputs > with network > should output the correct result for 'balancing' 1`] = `
[
  "Unshielded transfer by balancing completed
Did sender send all its Night? false
Did receiver receive all the Night? true
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'combined-transfer' 1`] = `
[
  "Transfer completed;
  Night balance: 1000000n
  shielded token balance: 1000000n
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'deregistration' 1`] = `
[
  "Registered night coins before deregistration: 5
Registered night coins after deregistration: 4
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'designation' 1`] = `
[
  "Generating dust before designation: false
Generating dust after designation: true
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'dust-fast-sync' 1`] = `
[
  "Dust state after projections-based fast sync:
{
  totalCoins: [
    {
      token: {
        initialValue: 0n,
        owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
        nonce: 24034453359289059849897357334564325073097009103426486395115878951231362120630n,
        seq: 0,
        ctime: 2025-08-05T12:00:00.000Z,
        backingNight: '10ba51819808fc09897af46574aa37b3fee89f7dc0dde00cae2924d09d3c33b5',
        mtIndex: 1n
      },
      dtime: undefined,
      maxCap: 250000000000000000000000n,
      maxCapReachedAt: 2025-08-12T12:00:15.000Z,
      generatedNow: 250000000000000000000000n,
      rate: 413350000000000000n
    },
    {
      token: {
        initialValue: 0n,
        owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
        nonce: 31442200660458619681158617659182332215873696935192568222776955722661365985367n,
        seq: 0,
        ctime: 2025-08-05T12:00:00.000Z,
        backingNight: 'adde850d59eb29dfe814ef592dcbdb5589841a219d37d9adbfccef7049323761',
        mtIndex: 4n
      },
      dtime: undefined,
      maxCap: 250000000000000000000000n,
      maxCapReachedAt: 2025-08-12T12:00:15.000Z,
      generatedNow: 250000000000000000000000n,
      rate: 413350000000000000n
    },
    {
      token: {
        initialValue: 0n,
        owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
        nonce: 32085853901361226275975148233968772158240692306844594632853942642512958619094n,
        seq: 0,
        ctime: 2025-08-05T12:00:00.000Z,
        backingNight: 'adf6979ee2caf3662dabe4588eb2311de04e97293c6f96e366bd4a67034d87e7',
        mtIndex: 0n
      },
      dtime: undefined,
      maxCap: 250000000000000000000000n,
      maxCapReachedAt: 2025-08-12T12:00:15.000Z,
      generatedNow: 250000000000000000000000n,
      rate: 413350000000000000n
    },
    {
      token: {
        initialValue: 0n,
        owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
        nonce: 50586679687627173730485799926282314706847051589385752828012176203617501615946n,
        seq: 0,
        ctime: 2025-08-05T12:00:00.000Z,
        backingNight: '35c11fc00b7f242d172ebade4edbb1d123134b444f6562ecfa80feb76eda126a',
        mtIndex: 2n
      },
      dtime: undefined,
      maxCap: 250000000000000000000000n,
      maxCapReachedAt: 2025-08-12T12:00:15.000Z,
      generatedNow: 250000000000000000000000n,
      rate: 413350000000000000n
    },
    {
      token: {
        initialValue: 0n,
        owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
        nonce: 39236833992364654568272956423128803082965139162007277965439978026566466488297n,
        seq: 0,
        ctime: 2025-08-05T12:00:00.000Z,
        backingNight: '15b3234d60a4ed3adefcc87dd4673c738a40455848a52787079dabddc072cbde',
        mtIndex: 3n
      },
      dtime: undefined,
      maxCap: 250000000000000000000000n,
      maxCapReachedAt: 2025-08-12T12:00:15.000Z,
      generatedNow: 250000000000000000000000n,
      rate: 413350000000000000n
    }
  ],
  availableCoins: [
    {
      token: {
        initialValue: 0n,
        owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
        nonce: 24034453359289059849897357334564325073097009103426486395115878951231362120630n,
        seq: 0,
        ctime: 2025-08-05T12:00:00.000Z,
        backingNight: '10ba51819808fc09897af46574aa37b3fee89f7dc0dde00cae2924d09d3c33b5',
        mtIndex: 1n
      },
      dtime: undefined,
      maxCap: 250000000000000000000000n,
      maxCapReachedAt: 2025-08-12T12:00:15.000Z,
      generatedNow: 250000000000000000000000n,
      rate: 413350000000000000n
    },
    {
      token: {
        initialValue: 0n,
        owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
        nonce: 31442200660458619681158617659182332215873696935192568222776955722661365985367n,
        seq: 0,
        ctime: 2025-08-05T12:00:00.000Z,
        backingNight: 'adde850d59eb29dfe814ef592dcbdb5589841a219d37d9adbfccef7049323761',
        mtIndex: 4n
      },
      dtime: undefined,
      maxCap: 250000000000000000000000n,
      maxCapReachedAt: 2025-08-12T12:00:15.000Z,
      generatedNow: 250000000000000000000000n,
      rate: 413350000000000000n
    },
    {
      token: {
        initialValue: 0n,
        owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
        nonce: 32085853901361226275975148233968772158240692306844594632853942642512958619094n,
        seq: 0,
        ctime: 2025-08-05T12:00:00.000Z,
        backingNight: 'adf6979ee2caf3662dabe4588eb2311de04e97293c6f96e366bd4a67034d87e7',
        mtIndex: 0n
      },
      dtime: undefined,
      maxCap: 250000000000000000000000n,
      maxCapReachedAt: 2025-08-12T12:00:15.000Z,
      generatedNow: 250000000000000000000000n,
      rate: 413350000000000000n
    },
    {
      token: {
        initialValue: 0n,
        owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
        nonce: 50586679687627173730485799926282314706847051589385752828012176203617501615946n,
        seq: 0,
        ctime: 2025-08-05T12:00:00.000Z,
        backingNight: '35c11fc00b7f242d172ebade4edbb1d123134b444f6562ecfa80feb76eda126a',
        mtIndex: 2n
      },
      dtime: undefined,
      maxCap: 250000000000000000000000n,
      maxCapReachedAt: 2025-08-12T12:00:15.000Z,
      generatedNow: 250000000000000000000000n,
      rate: 413350000000000000n
    },
    {
      token: {
        initialValue: 0n,
        owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
        nonce: 39236833992364654568272956423128803082965139162007277965439978026566466488297n,
        seq: 0,
        ctime: 2025-08-05T12:00:00.000Z,
        backingNight: '15b3234d60a4ed3adefcc87dd4673c738a40455848a52787079dabddc072cbde',
        mtIndex: 3n
      },
      dtime: undefined,
      maxCap: 250000000000000000000000n,
      maxCapReachedAt: 2025-08-12T12:00:15.000Z,
      generatedNow: 250000000000000000000000n,
      rate: 413350000000000000n
    }
  ],
  pendingCoins: [],
  progress: {
    appliedIndex: 133n,
    highestRelevantWalletIndex: 133n,
    highestIndex: 1n,
    highestRelevantIndex: 0n,
    isConnected: true,
    isStrictlyComplete: [Function: isStrictlyComplete],
    isCompleteWithin: [Function: isCompleteWithin]
  },
  publicKey: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
  address: DustAddress {
    data: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
    Symbol(MidnightBech32m): Bech32mCodec {
      type: 'dust',
      dataToBytes: [Function (anonymous)],
      dataFromBytes: [Function (anonymous)]
    }
  }
}
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'dust-sponsorship' 1`] = `
[
  "User received night for main transaction 1000000000n
Sponsored transfer completed
Did sponsor receive their night back? true
Did user spent all the Night? true
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'ecdsa-initialization' 1`] = `
[
  "ECDSA verifying key: {
  tag: 'ecdsa',
  value: '02948f9a220c28f52e08d374d2b148c66da54004f5ff50afa9e3601a6eec746cf5'
}
ECDSA unshielded address: mn_addr_undeployed183vvkddegcrnk76dmjzku65ganhvtq8qp7ux6ac4atzxqjmjvnfqhkveyd
Synced state:
{
  unshielded: {
    balances: {},
    availableCoins: [],
    pendingCoins: [],
    totalCoins: [],
    progress: {
      appliedId: 0n,
      highestTransactionId: 0n,
      isConnected: true,
      isStrictlyComplete: [Function: isStrictlyComplete],
      isCompleteWithin: [Function: isCompleteWithin]
    },
    address: UnshieldedAddress {
      data: Buffer(32) [Uint8Array] [
         60,  88, 203,  53, 185,  70,   7,  59,
        123,  77, 220, 133, 110, 106, 136, 236,
        238, 197, 128, 224,  15, 184, 109, 119,
         21, 234, 196,  96,  75, 114, 100, 210
      ],
      Symbol(MidnightBech32m): Bech32mCodec {
        type: 'addr',
        dataToBytes: [Function (anonymous)],
        dataFromBytes: [Function (anonymous)]
      }
    }
  }
}
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'hard-fork-support' 1`] = `
[
  "Protocol phase: settled at version 2000000
Pending transactions: 0, of which orphaned by the fork: 0
Restored the snapshot this wallet just wrote? true
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'initialization' 1`] = `
[
  "Synced state:
{
  shielded: {
    balances: {
      '0000000000000000000000000000000000000000000000000000000000000000': 250000000000000n,
      '0000000000000000000000000000000000000000000000000000000000000001': 50000000000000n,
      '0000000000000000000000000000000000000000000000000000000000000002': 50000000000000n
    },
    availableCoins: [
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: 'fa3a6316f5f1467106460093649f736a24dad01bd82dc652ce209269bcfa15cb',
          value: 50000000000000n,
          mt_index: 8n
        },
        commitment: '66b30e8fbd5b7ae69b288883e15359777f416f16be7de09f9248375d022c196e',
        nullifier: '050d27d9b42dd59baa0515c0890de8b3766b152ffc2eeaab7596739515bce070'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '1798ac8ed7e701e1f01a083ba4375ae2d9ac50c12f15c01358dc56ad38a95303',
          value: 50000000000000n,
          mt_index: 27n
        },
        commitment: 'ff09f7f2ac37c1503f165ce691cb09013f1ed6aaa52ec62a6bb59cc0a6a1f021',
        nullifier: '07e561009ed6b90c2d731ae3f967463a3e491a9a8903e0d7b9e3b578d1dfc7d5'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000001',
          nonce: '25bae4bf1f5348d9f18bd67de5a7ed1850a7bc9643d09911ed19c2fe9188b56f',
          value: 50000000000000n,
          mt_index: 3n
        },
        commitment: '3ca36e69242e4d3532feb43a60199360ac93584814d816d7c28c4d074bbed53e',
        nullifier: '1de26a3d7837cb13901abddbe10098243420b657600ca41cb991514d7923ce3c'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '06014a5577a0e6332600d5d2e8aa8c39a2ea87be69c8f397ac3bb2cacb9f1126',
          value: 50000000000000n,
          mt_index: 25n
        },
        commitment: 'f195e897edc667a373ad295a2fce6385fb64a34614ec7ad2a68a6d1b87e6f213',
        nullifier: '255f1c8b32665c3ef69286798331063077b5f55dd6a600422a10d9a058a87332'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '5e5943683d95c237825538e20f287975fbf25020f21a7ef0fae8bef8517fbbff',
          value: 50000000000000n,
          mt_index: 22n
        },
        commitment: 'e6be0c916d69830644c1699291c9a661d7692c48d029bda3590be1047a725cb5',
        nullifier: '32bd9ecfb9df1c184c72b975c52803a2903aa486946533bcdc650c95f3cc829f'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000002',
          nonce: 'cdec51cff753c64b32fc4f566c113497af9d9330e98200a48e3ed01f955be071',
          value: 50000000000000n,
          mt_index: 21n
        },
        commitment: 'e5c4e4f73aa045543e7726112eac7844b23c9bbdcb3bf00c2688647d1cb82d61',
        nullifier: '932474f34a4ea244cf4f05bb49b66c33bc6252ea6cddb124bcac10a09ba035a3'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: 'dc5d3f068d5e57fe4482ec9f18206db4701f761c80d2ab1cd627eecb4cefcbac',
          value: 50000000000000n,
          mt_index: 7n
        },
        commitment: '66485e616f48ac487a0b89e1f508f10a2fd8669775c719172b1b87c586f7b083',
        nullifier: 'f10812363f45b4e69972d2f01fca22af4f15fa272e8bc6923d98a598f7046944'
      }
    ],
    pendingCoins: [],
    totalCoins: [
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: 'fa3a6316f5f1467106460093649f736a24dad01bd82dc652ce209269bcfa15cb',
          value: 50000000000000n,
          mt_index: 8n
        },
        commitment: '66b30e8fbd5b7ae69b288883e15359777f416f16be7de09f9248375d022c196e',
        nullifier: '050d27d9b42dd59baa0515c0890de8b3766b152ffc2eeaab7596739515bce070'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '1798ac8ed7e701e1f01a083ba4375ae2d9ac50c12f15c01358dc56ad38a95303',
          value: 50000000000000n,
          mt_index: 27n
        },
        commitment: 'ff09f7f2ac37c1503f165ce691cb09013f1ed6aaa52ec62a6bb59cc0a6a1f021',
        nullifier: '07e561009ed6b90c2d731ae3f967463a3e491a9a8903e0d7b9e3b578d1dfc7d5'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000001',
          nonce: '25bae4bf1f5348d9f18bd67de5a7ed1850a7bc9643d09911ed19c2fe9188b56f',
          value: 50000000000000n,
          mt_index: 3n
        },
        commitment: '3ca36e69242e4d3532feb43a60199360ac93584814d816d7c28c4d074bbed53e',
        nullifier: '1de26a3d7837cb13901abddbe10098243420b657600ca41cb991514d7923ce3c'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '06014a5577a0e6332600d5d2e8aa8c39a2ea87be69c8f397ac3bb2cacb9f1126',
          value: 50000000000000n,
          mt_index: 25n
        },
        commitment: 'f195e897edc667a373ad295a2fce6385fb64a34614ec7ad2a68a6d1b87e6f213',
        nullifier: '255f1c8b32665c3ef69286798331063077b5f55dd6a600422a10d9a058a87332'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '5e5943683d95c237825538e20f287975fbf25020f21a7ef0fae8bef8517fbbff',
          value: 50000000000000n,
          mt_index: 22n
        },
        commitment: 'e6be0c916d69830644c1699291c9a661d7692c48d029bda3590be1047a725cb5',
        nullifier: '32bd9ecfb9df1c184c72b975c52803a2903aa486946533bcdc650c95f3cc829f'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000002',
          nonce: 'cdec51cff753c64b32fc4f566c113497af9d9330e98200a48e3ed01f955be071',
          value: 50000000000000n,
          mt_index: 21n
        },
        commitment: 'e5c4e4f73aa045543e7726112eac7844b23c9bbdcb3bf00c2688647d1cb82d61',
        nullifier: '932474f34a4ea244cf4f05bb49b66c33bc6252ea6cddb124bcac10a09ba035a3'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: 'dc5d3f068d5e57fe4482ec9f18206db4701f761c80d2ab1cd627eecb4cefcbac',
          value: 50000000000000n,
          mt_index: 7n
        },
        commitment: '66485e616f48ac487a0b89e1f508f10a2fd8669775c719172b1b87c586f7b083',
        nullifier: 'f10812363f45b4e69972d2f01fca22af4f15fa272e8bc6923d98a598f7046944'
      }
    ],
    progress: {
      appliedIndex: 29n,
      highestRelevantWalletIndex: 29n,
      highestIndex: 0n,
      highestRelevantIndex: 0n,
      isConnected: true,
      isStrictlyComplete: [Function: isStrictlyComplete],
      isCompleteWithin: [Function: isCompleteWithin]
    },
    coinPublicKey: ShieldedCoinPublicKey {
      data: Buffer(32) [Uint8Array] [
         27, 212, 248,  39, 190, 151, 255,   1,
         60,  74, 112,  46,  75,   8, 243,  14,
        195, 120, 114, 138,  84, 103,  12, 247,
        204, 146, 203, 155,  26,  20, 239, 246
      ]
    },
    encryptionPublicKey: ShieldedEncryptionPublicKey {
      data: Buffer(32) [Uint8Array] [
        182,  46,  99,  10,   3,   1, 113, 181,
        225,  26, 242,  72, 127,   1,   3, 230,
         80, 204, 112,  63,  40,  77,  10,  71,
        139,  42,  58, 189, 249, 113,  91, 112
      ]
    },
    address: ShieldedAddress {
      coinPublicKey: ShieldedCoinPublicKey {
        data: Buffer(32) [Uint8Array] [
           27, 212, 248,  39, 190, 151, 255,   1,
           60,  74, 112,  46,  75,   8, 243,  14,
          195, 120, 114, 138,  84, 103,  12, 247,
          204, 146, 203, 155,  26,  20, 239, 246
        ]
      },
      encryptionPublicKey: ShieldedEncryptionPublicKey {
        data: Buffer(32) [Uint8Array] [
          182,  46,  99,  10,   3,   1, 113, 181,
          225,  26, 242,  72, 127,   1,   3, 230,
           80, 204, 112,  63,  40,  77,  10,  71,
          139,  42,  58, 189, 249, 113,  91, 112
        ]
      },
      Symbol(MidnightBech32m): Bech32mCodec {
        type: 'shield-addr',
        dataToBytes: [Function (anonymous)],
        dataFromBytes: [Function (anonymous)]
      }
    }
  },
  unshielded: {
    balances: {
      '0000000000000000000000000000000000000000000000000000000000000000': 250000000000000n
    },
    availableCoins: [
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '712928a30857eaf9156d6586cfd4da630857890204141095a06abf35ddc1a45f',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '60a18d41c9c5bf3eabe7af5c76bd1f51a2a2a3be7b39d252a624bbaa40f1ab64',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '25fe03f8906c9bd2a9db4f2690d2e9e4f17b4194cc41b79458076d8ae486afaf',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: 'f66718af2c6a3d4f217f605194408c13563121e936f0015f22a2a405598e60f6',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '8333a6a659b0000423af1448f1621662ebb8335bfaa0947b295c301483ab882f',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      }
    ],
    pendingCoins: [],
    totalCoins: [
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '712928a30857eaf9156d6586cfd4da630857890204141095a06abf35ddc1a45f',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '60a18d41c9c5bf3eabe7af5c76bd1f51a2a2a3be7b39d252a624bbaa40f1ab64',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '25fe03f8906c9bd2a9db4f2690d2e9e4f17b4194cc41b79458076d8ae486afaf',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: 'f66718af2c6a3d4f217f605194408c13563121e936f0015f22a2a405598e60f6',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '8333a6a659b0000423af1448f1621662ebb8335bfaa0947b295c301483ab882f',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      }
    ],
    progress: {
      appliedId: 9n,
      highestTransactionId: 9n,
      isConnected: true,
      isStrictlyComplete: [Function: isStrictlyComplete],
      isCompleteWithin: [Function: isCompleteWithin]
    },
    address: UnshieldedAddress {
      data: Buffer(32) [Uint8Array] [
        188,  97,  13, 208, 124,  82, 245, 144,
         18, 168, 140,  47, 159,  28,  95,  52,
        203, 172, 199,  91, 134, 130,   2, 151,
         93, 111,  25, 190, 175,  55,  40,  75
      ],
      Symbol(MidnightBech32m): Bech32mCodec {
        type: 'addr',
        dataToBytes: [Function (anonymous)],
        dataFromBytes: [Function (anonymous)]
      }
    }
  },
  dust: {
    totalCoins: [
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 24034453359289059849897357334564325073097009103426486395115878951231362120630n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '10ba51819808fc09897af46574aa37b3fee89f7dc0dde00cae2924d09d3c33b5',
          mtIndex: 1n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 31442200660458619681158617659182332215873696935192568222776955722661365985367n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: 'adde850d59eb29dfe814ef592dcbdb5589841a219d37d9adbfccef7049323761',
          mtIndex: 4n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 32085853901361226275975148233968772158240692306844594632853942642512958619094n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: 'adf6979ee2caf3662dabe4588eb2311de04e97293c6f96e366bd4a67034d87e7',
          mtIndex: 0n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 50586679687627173730485799926282314706847051589385752828012176203617501615946n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '35c11fc00b7f242d172ebade4edbb1d123134b444f6562ecfa80feb76eda126a',
          mtIndex: 2n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 39236833992364654568272956423128803082965139162007277965439978026566466488297n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '15b3234d60a4ed3adefcc87dd4673c738a40455848a52787079dabddc072cbde',
          mtIndex: 3n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      }
    ],
    availableCoins: [
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 24034453359289059849897357334564325073097009103426486395115878951231362120630n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '10ba51819808fc09897af46574aa37b3fee89f7dc0dde00cae2924d09d3c33b5',
          mtIndex: 1n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 31442200660458619681158617659182332215873696935192568222776955722661365985367n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: 'adde850d59eb29dfe814ef592dcbdb5589841a219d37d9adbfccef7049323761',
          mtIndex: 4n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 32085853901361226275975148233968772158240692306844594632853942642512958619094n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: 'adf6979ee2caf3662dabe4588eb2311de04e97293c6f96e366bd4a67034d87e7',
          mtIndex: 0n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 50586679687627173730485799926282314706847051589385752828012176203617501615946n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '35c11fc00b7f242d172ebade4edbb1d123134b444f6562ecfa80feb76eda126a',
          mtIndex: 2n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 39236833992364654568272956423128803082965139162007277965439978026566466488297n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '15b3234d60a4ed3adefcc87dd4673c738a40455848a52787079dabddc072cbde',
          mtIndex: 3n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      }
    ],
    pendingCoins: [],
    progress: {
      appliedIndex: 50n,
      highestRelevantWalletIndex: 50n,
      highestIndex: 0n,
      highestRelevantIndex: 0n,
      isConnected: true,
      isStrictlyComplete: [Function: isStrictlyComplete],
      isCompleteWithin: [Function: isCompleteWithin]
    },
    publicKey: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
    address: DustAddress {
      data: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
      Symbol(MidnightBech32m): Bech32mCodec {
        type: 'dust',
        dataToBytes: [Function (anonymous)],
        dataFromBytes: [Function (anonymous)]
      }
    }
  }
}
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'redesignation' 1`] = `
[
  "Generating dust before designation: false
Generating dust after designation: true
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'shielded-transfer' 1`] = `
[
  "Shielded transfer completed; shielded balance: 1000000n
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'swap' 1`] = `
[
  "Does Alice have specific shielded coin before swap? false
Does Bob have specific shielded coin before swap? false
Does Alice have specific shielded coin after swap? true
Does Bob have specific shielded coin after swap? true
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'terms-and-conditions' 1`] = `
[
  "Terms and Conditions URL: https://www.midnight.gd/global-terms-txt
Terms and Conditions hash (SHA-256): ca85ed77bce68288e55300f006ccd5cce5d4940dc39fc41173a9c2ecd1eb616e
Computed hash: ca85ed77bce68288e55300f006ccd5cce5d4940dc39fc41173a9c2ecd1eb616e
Hash matches: true
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'unshielded-transfer' 1`] = `
[
  "Unshielded transfer completed; night balance: 1000000n
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'wasm-prover' 1`] = `
[
  "Synced state:
{
  shielded: {
    balances: {
      '0000000000000000000000000000000000000000000000000000000000000000': 250000000000000n,
      '0000000000000000000000000000000000000000000000000000000000000001': 50000000000000n,
      '0000000000000000000000000000000000000000000000000000000000000002': 50000000000000n
    },
    availableCoins: [
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: 'fa3a6316f5f1467106460093649f736a24dad01bd82dc652ce209269bcfa15cb',
          value: 50000000000000n,
          mt_index: 8n
        },
        commitment: '66b30e8fbd5b7ae69b288883e15359777f416f16be7de09f9248375d022c196e',
        nullifier: '050d27d9b42dd59baa0515c0890de8b3766b152ffc2eeaab7596739515bce070'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '1798ac8ed7e701e1f01a083ba4375ae2d9ac50c12f15c01358dc56ad38a95303',
          value: 50000000000000n,
          mt_index: 27n
        },
        commitment: 'ff09f7f2ac37c1503f165ce691cb09013f1ed6aaa52ec62a6bb59cc0a6a1f021',
        nullifier: '07e561009ed6b90c2d731ae3f967463a3e491a9a8903e0d7b9e3b578d1dfc7d5'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000001',
          nonce: '25bae4bf1f5348d9f18bd67de5a7ed1850a7bc9643d09911ed19c2fe9188b56f',
          value: 50000000000000n,
          mt_index: 3n
        },
        commitment: '3ca36e69242e4d3532feb43a60199360ac93584814d816d7c28c4d074bbed53e',
        nullifier: '1de26a3d7837cb13901abddbe10098243420b657600ca41cb991514d7923ce3c'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '06014a5577a0e6332600d5d2e8aa8c39a2ea87be69c8f397ac3bb2cacb9f1126',
          value: 50000000000000n,
          mt_index: 25n
        },
        commitment: 'f195e897edc667a373ad295a2fce6385fb64a34614ec7ad2a68a6d1b87e6f213',
        nullifier: '255f1c8b32665c3ef69286798331063077b5f55dd6a600422a10d9a058a87332'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '5e5943683d95c237825538e20f287975fbf25020f21a7ef0fae8bef8517fbbff',
          value: 50000000000000n,
          mt_index: 22n
        },
        commitment: 'e6be0c916d69830644c1699291c9a661d7692c48d029bda3590be1047a725cb5',
        nullifier: '32bd9ecfb9df1c184c72b975c52803a2903aa486946533bcdc650c95f3cc829f'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000002',
          nonce: 'cdec51cff753c64b32fc4f566c113497af9d9330e98200a48e3ed01f955be071',
          value: 50000000000000n,
          mt_index: 21n
        },
        commitment: 'e5c4e4f73aa045543e7726112eac7844b23c9bbdcb3bf00c2688647d1cb82d61',
        nullifier: '932474f34a4ea244cf4f05bb49b66c33bc6252ea6cddb124bcac10a09ba035a3'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: 'dc5d3f068d5e57fe4482ec9f18206db4701f761c80d2ab1cd627eecb4cefcbac',
          value: 50000000000000n,
          mt_index: 7n
        },
        commitment: '66485e616f48ac487a0b89e1f508f10a2fd8669775c719172b1b87c586f7b083',
        nullifier: 'f10812363f45b4e69972d2f01fca22af4f15fa272e8bc6923d98a598f7046944'
      }
    ],
    pendingCoins: [],
    totalCoins: [
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: 'fa3a6316f5f1467106460093649f736a24dad01bd82dc652ce209269bcfa15cb',
          value: 50000000000000n,
          mt_index: 8n
        },
        commitment: '66b30e8fbd5b7ae69b288883e15359777f416f16be7de09f9248375d022c196e',
        nullifier: '050d27d9b42dd59baa0515c0890de8b3766b152ffc2eeaab7596739515bce070'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '1798ac8ed7e701e1f01a083ba4375ae2d9ac50c12f15c01358dc56ad38a95303',
          value: 50000000000000n,
          mt_index: 27n
        },
        commitment: 'ff09f7f2ac37c1503f165ce691cb09013f1ed6aaa52ec62a6bb59cc0a6a1f021',
        nullifier: '07e561009ed6b90c2d731ae3f967463a3e491a9a8903e0d7b9e3b578d1dfc7d5'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000001',
          nonce: '25bae4bf1f5348d9f18bd67de5a7ed1850a7bc9643d09911ed19c2fe9188b56f',
          value: 50000000000000n,
          mt_index: 3n
        },
        commitment: '3ca36e69242e4d3532feb43a60199360ac93584814d816d7c28c4d074bbed53e',
        nullifier: '1de26a3d7837cb13901abddbe10098243420b657600ca41cb991514d7923ce3c'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '06014a5577a0e6332600d5d2e8aa8c39a2ea87be69c8f397ac3bb2cacb9f1126',
          value: 50000000000000n,
          mt_index: 25n
        },
        commitment: 'f195e897edc667a373ad295a2fce6385fb64a34614ec7ad2a68a6d1b87e6f213',
        nullifier: '255f1c8b32665c3ef69286798331063077b5f55dd6a600422a10d9a058a87332'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: '5e5943683d95c237825538e20f287975fbf25020f21a7ef0fae8bef8517fbbff',
          value: 50000000000000n,
          mt_index: 22n
        },
        commitment: 'e6be0c916d69830644c1699291c9a661d7692c48d029bda3590be1047a725cb5',
        nullifier: '32bd9ecfb9df1c184c72b975c52803a2903aa486946533bcdc650c95f3cc829f'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000002',
          nonce: 'cdec51cff753c64b32fc4f566c113497af9d9330e98200a48e3ed01f955be071',
          value: 50000000000000n,
          mt_index: 21n
        },
        commitment: 'e5c4e4f73aa045543e7726112eac7844b23c9bbdcb3bf00c2688647d1cb82d61',
        nullifier: '932474f34a4ea244cf4f05bb49b66c33bc6252ea6cddb124bcac10a09ba035a3'
      },
      {
        coin: {
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          nonce: 'dc5d3f068d5e57fe4482ec9f18206db4701f761c80d2ab1cd627eecb4cefcbac',
          value: 50000000000000n,
          mt_index: 7n
        },
        commitment: '66485e616f48ac487a0b89e1f508f10a2fd8669775c719172b1b87c586f7b083',
        nullifier: 'f10812363f45b4e69972d2f01fca22af4f15fa272e8bc6923d98a598f7046944'
      }
    ],
    progress: {
      appliedIndex: 29n,
      highestRelevantWalletIndex: 29n,
      highestIndex: 0n,
      highestRelevantIndex: 0n,
      isConnected: true,
      isStrictlyComplete: [Function: isStrictlyComplete],
      isCompleteWithin: [Function: isCompleteWithin]
    },
    coinPublicKey: ShieldedCoinPublicKey {
      data: Buffer(32) [Uint8Array] [
         27, 212, 248,  39, 190, 151, 255,   1,
         60,  74, 112,  46,  75,   8, 243,  14,
        195, 120, 114, 138,  84, 103,  12, 247,
        204, 146, 203, 155,  26,  20, 239, 246
      ]
    },
    encryptionPublicKey: ShieldedEncryptionPublicKey {
      data: Buffer(32) [Uint8Array] [
        182,  46,  99,  10,   3,   1, 113, 181,
        225,  26, 242,  72, 127,   1,   3, 230,
         80, 204, 112,  63,  40,  77,  10,  71,
        139,  42,  58, 189, 249, 113,  91, 112
      ]
    },
    address: ShieldedAddress {
      coinPublicKey: ShieldedCoinPublicKey {
        data: Buffer(32) [Uint8Array] [
           27, 212, 248,  39, 190, 151, 255,   1,
           60,  74, 112,  46,  75,   8, 243,  14,
          195, 120, 114, 138,  84, 103,  12, 247,
          204, 146, 203, 155,  26,  20, 239, 246
        ]
      },
      encryptionPublicKey: ShieldedEncryptionPublicKey {
        data: Buffer(32) [Uint8Array] [
          182,  46,  99,  10,   3,   1, 113, 181,
          225,  26, 242,  72, 127,   1,   3, 230,
           80, 204, 112,  63,  40,  77,  10,  71,
          139,  42,  58, 189, 249, 113,  91, 112
        ]
      },
      Symbol(MidnightBech32m): Bech32mCodec {
        type: 'shield-addr',
        dataToBytes: [Function (anonymous)],
        dataFromBytes: [Function (anonymous)]
      }
    }
  },
  unshielded: {
    balances: {
      '0000000000000000000000000000000000000000000000000000000000000000': 250000000000000n
    },
    availableCoins: [
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '712928a30857eaf9156d6586cfd4da630857890204141095a06abf35ddc1a45f',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '60a18d41c9c5bf3eabe7af5c76bd1f51a2a2a3be7b39d252a624bbaa40f1ab64',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '25fe03f8906c9bd2a9db4f2690d2e9e4f17b4194cc41b79458076d8ae486afaf',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: 'f66718af2c6a3d4f217f605194408c13563121e936f0015f22a2a405598e60f6',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '8333a6a659b0000423af1448f1621662ebb8335bfaa0947b295c301483ab882f',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      }
    ],
    pendingCoins: [],
    totalCoins: [
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '712928a30857eaf9156d6586cfd4da630857890204141095a06abf35ddc1a45f',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '60a18d41c9c5bf3eabe7af5c76bd1f51a2a2a3be7b39d252a624bbaa40f1ab64',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '25fe03f8906c9bd2a9db4f2690d2e9e4f17b4194cc41b79458076d8ae486afaf',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: 'f66718af2c6a3d4f217f605194408c13563121e936f0015f22a2a405598e60f6',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      },
      {
        utxo: {
          value: 50000000000000n,
          owner: 'mn_addr_undeployed1h3ssm5ru2t6eqy4g3she78zlxn96e36ms6pq996aduvmateh9p9sk96u7s',
          type: '0000000000000000000000000000000000000000000000000000000000000000',
          intentHash: '8333a6a659b0000423af1448f1621662ebb8335bfaa0947b295c301483ab882f',
          outputNo: 0
        },
        meta: {
          ctime: 2025-08-05T12:00:00.000Z,
          registeredForDustGeneration: true
        }
      }
    ],
    progress: {
      appliedId: 9n,
      highestTransactionId: 9n,
      isConnected: true,
      isStrictlyComplete: [Function: isStrictlyComplete],
      isCompleteWithin: [Function: isCompleteWithin]
    },
    address: UnshieldedAddress {
      data: Buffer(32) [Uint8Array] [
        188,  97,  13, 208, 124,  82, 245, 144,
         18, 168, 140,  47, 159,  28,  95,  52,
        203, 172, 199,  91, 134, 130,   2, 151,
         93, 111,  25, 190, 175,  55,  40,  75
      ],
      Symbol(MidnightBech32m): Bech32mCodec {
        type: 'addr',
        dataToBytes: [Function (anonymous)],
        dataFromBytes: [Function (anonymous)]
      }
    }
  },
  dust: {
    totalCoins: [
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 24034453359289059849897357334564325073097009103426486395115878951231362120630n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '10ba51819808fc09897af46574aa37b3fee89f7dc0dde00cae2924d09d3c33b5',
          mtIndex: 1n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 31442200660458619681158617659182332215873696935192568222776955722661365985367n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: 'adde850d59eb29dfe814ef592dcbdb5589841a219d37d9adbfccef7049323761',
          mtIndex: 4n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 32085853901361226275975148233968772158240692306844594632853942642512958619094n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: 'adf6979ee2caf3662dabe4588eb2311de04e97293c6f96e366bd4a67034d87e7',
          mtIndex: 0n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 50586679687627173730485799926282314706847051589385752828012176203617501615946n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '35c11fc00b7f242d172ebade4edbb1d123134b444f6562ecfa80feb76eda126a',
          mtIndex: 2n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 39236833992364654568272956423128803082965139162007277965439978026566466488297n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '15b3234d60a4ed3adefcc87dd4673c738a40455848a52787079dabddc072cbde',
          mtIndex: 3n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      }
    ],
    availableCoins: [
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 24034453359289059849897357334564325073097009103426486395115878951231362120630n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '10ba51819808fc09897af46574aa37b3fee89f7dc0dde00cae2924d09d3c33b5',
          mtIndex: 1n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 31442200660458619681158617659182332215873696935192568222776955722661365985367n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: 'adde850d59eb29dfe814ef592dcbdb5589841a219d37d9adbfccef7049323761',
          mtIndex: 4n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 32085853901361226275975148233968772158240692306844594632853942642512958619094n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: 'adf6979ee2caf3662dabe4588eb2311de04e97293c6f96e366bd4a67034d87e7',
          mtIndex: 0n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 50586679687627173730485799926282314706847051589385752828012176203617501615946n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '35c11fc00b7f242d172ebade4edbb1d123134b444f6562ecfa80feb76eda126a',
          mtIndex: 2n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      },
      {
        token: {
          initialValue: 0n,
          owner: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
          nonce: 39236833992364654568272956423128803082965139162007277965439978026566466488297n,
          seq: 0,
          ctime: 2025-08-05T12:00:00.000Z,
          backingNight: '15b3234d60a4ed3adefcc87dd4673c738a40455848a52787079dabddc072cbde',
          mtIndex: 3n
        },
        dtime: undefined,
        maxCap: 250000000000000000000000n,
        maxCapReachedAt: 2025-08-12T12:00:15.000Z,
        generatedNow: 0n,
        rate: 413350000000000000n
      }
    ],
    pendingCoins: [],
    progress: {
      appliedIndex: 50n,
      highestRelevantWalletIndex: 50n,
      highestIndex: 0n,
      highestRelevantIndex: 0n,
      isConnected: true,
      isStrictlyComplete: [Function: isStrictlyComplete],
      isCompleteWithin: [Function: isCompleteWithin]
    },
    publicKey: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
    address: DustAddress {
      data: 11886380015789543296729785856017363359697744265386149017101029008360306658047n,
      Symbol(MidnightBech32m): Bech32mCodec {
        type: 'dust',
        dataToBytes: [Function (anonymous)],
        dataFromBytes: [Function (anonymous)]
      }
    }
  }
}
",
]
`;

exports[`Snippet outputs > with network > should output the correct result for 'well-formed-validation' 1`] = `
[
  "Validated unproven transaction (structural checks only)
Validated finalized transaction (full strictness)
Transfer with full validation completed
",
]
`;

exports[`Snippet outputs > without network > should output the correct result for 'addresses' 1`] = `
[
  "unshielded address mn_addr_undeployed13h0e3c2m7rcfem6wvjljnyjmxy5rkg9kkwcldzt73ya5pv7c4p8skzgqwj
 are unshielded addresses equal? true
mainnet unshielded address mn_addr13h0e3c2m7rcfem6wvjljnyjmxy5rkg9kkwcldzt73ya5pv7c4p8shdxvu5
 are mainnet unshielded addresses equal? true
shielded address mn_shield-addr_undeployed15qkz74st4utmdjvzwj8g6zt85zpjeg6s0vfv3pwd9weaqexrt2dqsjk0cyf658cmttf8m30tldatpacryugm70ql8n9j3400ge3v7ecn4lyn6
 are shielded addresses equal? true
dust address mn_dust_undeployed1da40n96p3afrvs84zhuw354z755hhus5e3g49j0aw3c4gte3kmksnd5awz
 are dust addresses equal? true
",
]
`;

exports[`Snippet outputs > without network > should output the correct result for 'hd' 1`] = `
[
  "seed 0000000000000000000000000000000000000000000000000000000000000000
unshielded(Night) secret key 22b8e577b3f638b2b361f36fd62d7138ed489d9afe3da5f7c325e2d0a95ae043
shielded:
  seed 9690d4013e42e6739d9496f836b2cbd4339451c02a00624b86e9fb15cc4197a8
  coin secret key 6d69646e696768743a7a737761702d636f696e2d7365637265742d6b65795b76315d3af9e01827aa841edfbf90bb11a207e0df140dbec913dca5025fd588b8ec102aab
  encryption secret key 6fc92f70f2e4b474b6a184ec0bc8d78aa19c3c153bd8283907b36a7a6556fcb1
dust:
  seed b9b76cce66828aa6bd798abbb15b012331a6aa1e5f99e678724c37463b5775a1
  public key 1a4773e2a3c668ac50092b0a6e5a7bca49a332dab58a2c923e7078b8cbac4aff
",
]
`;
